# uav_control

./: README.md
autopilot/: .gitignore  .gitmodules
autopilot/src/autopilot/: CMakeLists.txt  package.xml
autopilot/src/autopilot/config/mavros/: px4_config.yaml
autopilot/src/autopilot/config/rtabmap/: local_costmap_params.yaml
autopilot/src/autopilot/launch/autopilot/: connect_hitl.launch  connect_px4.launch  connect_px4_pc.launch  connect_sitl.launch  px4_config.yaml
autopilot/src/autopilot/launch/camera/: rs_d435i.launch  rs_t265.launch  rs_two_cameras.launch
autopilot/src/autopilot/launch/logging/: record_bag.launch
autopilot/src/autopilot/launch/vio/: bridge_t265.launch  t265_tf_to_mavros.launch
autopilot/src/autopilot/script/: duplicate_tf_tree.py  record_localization.py  throttle_odom.py  transformation.py
autopilot/src/data_collection/: CMakeLists.txt  package.xml
autopilot/src/data_collection/launch/: recored_bag.launch
autopilot/src/data_collection/msg/: Custom.msg
autopilot/src/data_collection/script/: convert_bag2file.py
autopilot/src/data_collection/src/: record_data.cpp
autopilot/src/px4_offboard/: CMakeLists.txt  package.xml
autopilot/src/px4_offboard/include/: common.h  math_utils.h  rulebased_ctrl.h
autopilot/src/px4_offboard/launch/: forward_flight.launch
autopilot/src/px4_offboard/msg/: Affordance.msg
autopilot/src/px4_offboard/script/: affordance_utils.py  math_utils.py  plot_utils.py  test.py
autopilot/src/px4_offboard/script/spline_result/: spline_result.csv
autopilot/src/px4_offboard/src/: forward_flight.cpp  offboard_test.cpp  rulebased_ctrl.cpp  set_attitude.cpp
mpc/: CMakeLists.txt  package.xml
mpc/include/mpc/: mpc_controller.h  mpc_params.h  mpc_wrapper.h
mpc/launch/: mpc_controller.launch
mpc/model/: quadrotor_model_thrustrates.cpp
mpc/parameters/: default.yaml
mpc/src/: autopilot_mpc_instance.cpp  mpc_controller.cpp  mpc_wrapper.cpp
